# audio_qc_service

./: .dockerignore  .gitignore  Dockerfile  README.md  config.toml  pyproject.toml  requirements.txt  tree.md
app/: main.py
app/api/: health_router.py  routes.py
app/core/: config.py  ids.py  logging.py  response.py  stats.py  status_codes.py
app/infra/: gpu_gate.py  tempfiles.py  threadpool.py
app/services/: audio_io.py  decoder.py  qc_service.py  vad_engine.py
app/services/metrics/: clarity_v1.py  clipping.py  silence.py  vad_utils.py
app/utils/: time.py  validate.py
docs/: api.md  deploy.md
scripts/: bench_ab.py  curl_example.sh  export_energy.py  run_dev.sh
tests/: gen_test_audio.py  test_api_smoke.py  test_clipping.py  test_concurrent_vad.py  test_load_concurrent.py  test_segments_merge.py  test_silence.py
